<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f0f0f0"
    tools:context=".activity.CostFreeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:text="التكلفة المجانية"
        android:textColor="#500"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="12dp"
        android:gravity="center_vertical"
        tools:ignore="RtlHardcoded">

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/costFree"
            android:textColor="#000"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/editTextCostFree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:hint="@string/enterCostFree"
            android:inputType="text"
            tools:ignore="TextFields" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/minutesFree"
            android:textColor="#000"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/editTextNumberOfM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:hint="@string/enterNumberOfM"
            android:inputType="text"
            tools:ignore="TextFields" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/numberOfTrying"
            android:textColor="#000"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/editTextNumberOfTrying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:hint="@string/enterNumberOfTrying"
            android:inputType="text"
            tools:ignore="TextFields" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/minutesFreeATF"
            android:textColor="#000"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/editTextNumberOfMATF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:hint="@string/enterNumberOfM"
            android:inputType="text"
            tools:ignore="TextFields" />

    </LinearLayout>
</LinearLayout>
