<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"

    android:layout_height="match_parent"
    tools:context=".activity.AddAdviserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:background="@android:color/white">

        <include
            android:id="@+id/toolbar"
            layout="@layout/bar_layout"/>

    </LinearLayout>

    <ImageView
        android:layout_width="175dp"
        android:layout_height="75dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="22dp"
        android:contentDescription="@string/TODO"
        android:src="@drawable/logo" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editTextFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/font_my_app"
        android:gravity="right"
        android:hint="@string/full_name"
        android:inputType="text"
        android:textSize="14sp"
        app:met_baseColor="@color/gray_my_app"
        app:met_floatingLabel="normal"
        app:met_floatingLabelTextColor="@android:color/black"
        app:met_primaryColor="@color/light_gray_my_app"
        tools:ignore="RtlHardcoded,UnusedAttribute" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/font_my_app"
        android:gravity="right"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="14sp"
        app:met_baseColor="@color/gray_my_app"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextColor="@android:color/black"
        app:met_primaryColor="@color/light_gray_my_app"
        tools:ignore="RtlHardcoded,UnusedAttribute" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editTextPassword"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/font_my_app"
        android:gravity="right"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="14sp"
        app:met_baseColor="@color/gray_my_app"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextColor="@android:color/black"
        app:met_primaryColor="@color/light_gray_my_app"
        tools:ignore="RtlHardcoded,UnusedAttribute" />

    <Spinner
        android:id="@+id/spinner_type"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="12dp" />

    <CheckBox
        android:id="@+id/checkBoxIsStar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right|center_vertical"
        android:text="@string/is_star"
        android:button="@null"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"

        />

    <Button
        android:id="@+id/buttonAddLawyer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="22dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/skip_button_shape"
        android:text="@string/add_lawyer"
        android:textColor="#fff"
        android:textSize="12sp"
        android:textStyle="italic" />




</LinearLayout>