<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:CardView="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:clickable="true"
        android:focusable="true"
        CardView:cardCornerRadius="10dp"
        CardView:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="#fff"
            android:gravity="center"

                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/textViewNameType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:textColor="#000"
                    android:text="@string/TODO"
                    android:gravity="center"
                    android:padding="12dp" />




                    <Button
                        android:id="@+id/buttonEdit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="#0000"
                        android:textColor="#01f"
                        android:text="@string/edit"

                        android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:background="#201f"
                android:layout_height="match_parent"/>
                    <Button
                        android:id="@+id/buttonDelete"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/delete"
                        android:background="#0000"
                        android:textColor="#01f"
                        android:textStyle="bold" />


            </LinearLayout>



    </androidx.cardview.widget.CardView>
</LinearLayout>